# ssp_transformations_handler

./: .gitignore  pyproject.toml
src/ssp_transformations_handler/: GeneralUtils.py  TransformationUtils.py
src/ssp_transformations_handler.egg-info/: PKG-INFO
src/transformation_matrix_handler/: GeneralUtils.py  TransformationUtils.py
tests/: test_frac_vars_norm.ipynb
tests/ssp_modeling/config_files/: mexico_config.yaml
tests/ssp_modeling/input_data/: mexico_input_fixed.csv
tests/ssp_modeling/notebooks/: mexico_manager_wb.ipynb
tests/ssp_modeling/scenario_mapping/: ssp_mexico_transformation_dummy.xlsx
tests/ssp_modeling/transformations/: strategy_definitions.csv  transformation_agrc_dec_ch4_rice_strategy_M8_EC.yaml  transformation_agrc_dec_exports_strategy_M8_EC.yaml  transformation_agrc_dec_losses_supply_chain_strategy_M8_EC.yaml  transformation_agrc_inc_conservation_agriculture_strategy_M8_EC.yaml  transformation_agrc_inc_conservation_agriculture_strategy_SV.yaml  transformation_agrc_inc_productivity_strategy_M8_EC.yaml  transformation_ccsq_inc_capture_strategy_M8_EC.yaml  transformation_entc_dec_losses_strategy_M8_EC.yaml  transformation_entc_target_clean_hydrogen_strategy_M8_EC.yaml  transformation_entc_target_renewable_elec_strategy_M8_EC.yaml  transformation_fgtv_dec_leaks_strategy_M8_EC.yaml  transformation_fgtv_inc_flare_strategy_M8_EC.yaml  transformation_inen_inc_efficiency_energy_strategy_M7_EE.yaml  transformation_inen_inc_efficiency_energy_strategy_M8_EC.yaml  transformation_inen_inc_efficiency_production_strategy_M8_EC.yaml  (+61 more)
(+5 files in other folders)
